# bioml-localization-predictor

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
data/raw/: protein_localization_sample.csv
examples/: inference_sequences.fasta
scripts/: generate_synthetic_dataset.py
src/bioml_localization/: __init__.py  cli.py  data.py  features.py  model.py  predict.py  train.py
tests/: test_features.py  test_training.py
